syntax = "proto3";

package proto;

service NewsService {
    rpc GetNews(GetNewsRequest) returns (GetNewsResponse) {}
}

message GetNewsRequest {
    int32 limit = 1;
    int32 offset = 2;
}

message GetNewsResponse {
    repeated News news = 1;
}

message News {
    int32 id = 1;
    string title = 2;
    string description = 3;
    string link = 4;
}